@@ -53,9 +53,10 @@ struct CPoint;
 enum CTxtFace
 {
 	kNormalFace    = 0,
-	kBoldFace      = 1,
-	kItalicFace    = 2,
-	kUnderlineFace = 4
+	kBoldFace      = 1 << 1,
+	kItalicFace    = 1 << 2,
+	kUnderlineFace = 1 << 3,
+	kStrikethroughFace = 1 << 4
 };
 
 //-----------------------------------------------------------------------------
